--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,10 @@ plugins:
   - jekyll-feed
   - jekyll-include-cache
 
+paginate: 5
+paginate_path: "/blog/page:num"
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
