--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,7 @@
   link: /talks/
 - name: Team
   link: /team/
+ - name: Harvard efforts
+  link: /harvard/
+- name: Princeton efforts
+  link: /Princeton/
