--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ plugins:
   - jekyll-include-cache
 
 paginate: 5
-paginate_path: "/blog/page:num"
+paginate_path: "/news/page:num"
 
 
 # Exclude from processing.
