--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   link: /talks/
 - name: Team
   link: /team/
-- name: Princeton efforts
+- name: Princeton 
   link: /Princeton/
-- name: Harvard efforts
+- name: Harvard 
   link: /harvard/
