--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Students for Ukraine
+subtitle: Students for Ukraine
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   We are a team of students who strongly oppose the Russian invasion of Ukrain, and we are committed to raising awareness about the war in Ukraine and the repercussions in Russia.
