--- a/_data/team_callouts.yml
+++ b/_data/team_callouts.yml
@@ -1,31 +1,21 @@
 style: is-light
 height: is-medium
 items:
-  - title: Example callout 1
+  - title: Princeton
     subtitle: Example subtitle 1
-    icon: fa-space-shuttle
     description: >
-      The example description text goes here and can be multiple lines.
+      Kate Ivshina
 
-      For example, such as this. 
-    call_to_action_name: Call to action 1
-    call_to_action_link: /page-1/
-  - title: Example callout 2
+      Liza Rozenberg
+
+      Nadya Fishchenko
+
+      Betsy Pu
+  - title: Harvard
     subtitle: Example subtitle 2
-    icon: fa-wrench
     description: >
-      The example description text goes here and can be multiple lines.
+      Polina Galouchko
 
-      For example, such as this.
-    call_to_action_name: Call to action 2
-    call_to_action_link: /page-2/
-  - title: Example callout 3
-    subtitle: Example subtitle 3
-    icon: fa-github
-    icon_brand: true
-    description: >
-      The example description text goes here and can be multiple lines.
+      Nika Rudenko
 
-      For example, such as this.
-    call_to_action_name: Call to action 3
-    call_to_action_link: /page-3/
+      Sasha Zhigalin
