--- a/_data/team_callouts.yml
+++ b/_data/team_callouts.yml
@@ -15,13 +15,8 @@ items:
     call_to_action_link: /princeton
   - title: Harvard University
     subtitle:
-    description: >
-      Polina Galouchko
-
-      Nika Rudenko
-
-      Sasha Zhigalin
-
-      \n
+    description: "Polina Galouchko\n
+      Nika Rudenko\n
+      Sasha Zhigalin\n\n"
     call_to_action_name: View Harvard Initiatives
     call_to_action_link: /harvard
