--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,5 @@
   link: /talks/
 - name: Princeton 
   link: /princeton/
-- name: Harvard 
-  link: /harvard/
+#- name: Harvard 
+#  link: /harvard/
