--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /news/
 - name: Events
   link: /talks/
-- name: Princeton 
-  link: /princeton/
+#- name: Princeton 
+#  link: /princeton/
 #- name: Harvard 
 #  link: /harvard/
